testdata/errors/invalid_tags.go
package errors

type Invalid struct {
	InvalidFlag string `builder:'bla'"`
}
